scrollbar fixed on /portfolio

--- a/content/portfolio/assets/style.css
+++ b/content/portfolio/assets/style.css
@@ -1,3 +1,17 @@
+body::-webkit-scrollbar {
+	width: 12px;               /* width of the entire scrollbar */
+  }
+  
+  body::-webkit-scrollbar-track {
+	background: #black;        /* color of the tracking area */
+  }
+  
+  body::-webkit-scrollbar-thumb {
+	background-color: grey;    /* color of the scroll thumb */
+	border-radius: 20px;       /* roundness of the scroll thumb */
+	border: 2px solid ;  /* creates padding around scroll thumb */
+}
+
 *{
     margin: 0%;
     padding: 0%;
